@@ -12,13 +12,19 @@ import ru.otus.l041.Benchmark;
 //-XX:+HeapDumpOnOutOfMemoryError
 //-XX:HeapDumpPath=${workspace_loc}
 
+// GC (one of the following options):
+// -XX:+UseSerialGC
+// -XX:+UseParallelGC
+// -XX:+UseConcMarkSweepGC
+// -XX:+UseG1GC
+
 public class Main {
 
 	public static void main(String[] args) throws Exception {
 		
 		System.out.println("Starting PID: " + ManagementFactory.getRuntimeMXBean().getName());
 
-        int size = 1 * 1000 * 1000;
+        int size = 300 * 1000;
 
         MBeanServer mbs = ManagementFactory.getPlatformMBeanServer();
         ObjectName name = new ObjectName("ru.otus:type=Benchmark");
